--- a/DemoApp/DemoApp.csproj
+++ b/DemoApp/DemoApp.csproj
@@ -7,24 +7,56 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="App_data\" />
+    <Content Include="..\Veiledning_JSON\bfk-schema-3.json" Link="App_data\JSON\bfk-schema-3.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Veiledning_JSON\Bufdir_barnevern_henvisning_veiledning_v0.9.0.json" Link="App_data\JSON\Bufdir_barnevern_henvisning_veiledning_v0.9.0.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Veiledning_JSON\HenvisningVeiledning_v0.9.0.schema.json" Link="App_data\JSON\HenvisningVeiledning_v0.9.0.schema.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\XSD\Bufdir_Barnevern_Generelt_kodelister_v0.9.0.xml" Link="App_data\XSD\Bufdir_Barnevern_Generelt_kodelister_v0.9.0.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\XSD\Bufdir_Barnevern_Henvisning_kodelister_v0.9.0.xml" Link="App_data\XSD\Bufdir_Barnevern_Henvisning_kodelister_v0.9.0.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\XSD\Bufdir_Generelt_kodelister_v0.9.0.xml" Link="App_data\XSD\Bufdir_Generelt_kodelister_v0.9.0.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\XSD\Bufdir_Melding_kodelister_v0.9.0.xml" Link="App_data\XSD\Bufdir_Melding_kodelister_v0.9.0.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Defs\Bufdir-Barnevern-Generelt_v0.1.0.xsd">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Folder Include="App_data\" />
+    <Folder Include="App_data\JSON\" />
+    <Folder Include="App_data\XSD\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\XSD\Bufdir_Barnevern_Generelt_v0.9.0.xsd" Link="App_data\XSD\Bufdir_Barnevern_Generelt_v0.9.0.xsd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Defs\Bufdir-Barnevern-Henvisning-2.linje_v0.1.0.xsd">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Include="..\XSD\Bufdir_Barnevern_Henvisning_Fosterhjem_v0.9.0.xsd" Link="App_data\XSD\Bufdir_Barnevern_Henvisning_Fosterhjem_v0.9.0.xsd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Defs\Bufdir-Barnevern-Melding_v0.1.0.xsd">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Include="..\XSD\Bufdir_Barnevern_Henvisning_v0.9.0.xsd" Link="App_data\XSD\Bufdir_Barnevern_Henvisning_v0.9.0.xsd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Defs\Bufdir-Barnevernregister_v2.2.3.xsd">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Include="..\XSD\Bufdir_Generelt_v0.9.0.xsd" Link="App_data\XSD\Bufdir_Generelt_v0.9.0.xsd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Defs\Bufdir-kodelister_0.1.0.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Include="..\XSD\Bufdir_Kvitteringsmelding_v0.9.0.xsd" Link="App_data\XSD\Bufdir_Kvitteringsmelding_v0.9.0.xsd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\XSD\Bufdir_Melding_v0.9.0.xsd" Link="App_data\XSD\Bufdir_Melding_v0.9.0.xsd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\XSD\Bufdir_TrukketMelding_v0.9.0.xsd" Link="App_data\XSD\Bufdir_TrukketMelding_v0.9.0.xsd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
