--- a/DemoApp/appsettings.Development.json
+++ b/DemoApp/appsettings.Development.json
@@ -7,5 +7,7 @@
     }
   },
   "DefsPath": "..\\XSD",
-  "JsonPath": "..\\Veiledning_JSON"
+  "CodelistPath": "..\\XSD\\Kodelister XML",
+  "JsonPath": "..\\Veiledning og tekster",
+  "TestFilePath": ".\\App_data\\testfiler"
 }
